--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>学习社区</title>
+    <title>发布-学习社区</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap-theme.min.css">
@@ -35,6 +35,8 @@
                         <li><a href="#">消息中心</a></li>
                         <li><a href="#">个人资料</a></li>
                         <li><a href="#">退出登录</a></li>
+
+
                     </ul>
                 <li class="dropdown" th:if="${session.user==null}">
                 <li><a href="https://github.com/login/oauth/authorize?client_id=1984ccc4cf0af8fc304e&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a></li>
@@ -43,6 +45,12 @@
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12" style="background-color: red"></div>
+            <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12" style="background-color: green"></div>
+        </div>
+    </div>
 </nav>
 </body>
 </html>
