--- a/src/main/resources/templates/navigaton.html
+++ b/src/main/resources/templates/navigaton.html
@@ -36,7 +36,7 @@
 
                         <ul class="dropdown-menu">
                             <li><a href="/profile/questions">我的问题</a></li>
-                            <li><a href="#">退出登录</a></li>
+                            <li><a href="/logout">退出登录</a></li>
                         </ul>
                     <li th:if="${session.user==null}">
                         <a href="https://github.com/login/oauth/authorize?client_id=1984ccc4cf0af8fc304e&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
