--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -15,7 +15,6 @@
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12" >
             <h4><span th:text="${question.title}"></span></h4>
-            <span th:text="${question.description}"></span><br>
             <span class="text-desc">
                     作者：<span th:text="${question.user.name}"></span> |
                     发布时间：<span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}"></span> |
@@ -25,8 +24,8 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}" ></div>
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-            <a th:href="@{'/publish/'+${question.id}}" class="community-menu">
-                    <span class="glyphicon glyphicon-pencil"></span>
+            <a th:href="@{'/publish/'+${question.id}}" class="community-menu" th:if="${session.user != null && session.user.id == question.creator }">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                     编辑
             </a>
 
