--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -1,40 +1,80 @@
 body{
     background-color: #efefef;
 }
+
 .main{
     background-color: white;
     margin:30px;
 }
+
 .btn-publish{
     float: right;
     margin-bottom: 15px;
 }
+
 .btn-success{
     float: right;
     margin-bottom: 10px;
 }
+
 .media-object{
     width: 38px;
     height: 38px;
 }
+
 .media-body{
     padding-top: 10px;
 }
+
 .text-desc{
     font-size: 12px;
     font-weight: normal;
     color: #999;
 }
+
 .profile .section{
     margin-top: 15px;
 }
+
+.question-title{
+    margin-top: 25px;
+}
+
 .community-menu{
     color:#999;
     font-size: 13px;
 }
+
 .jumbotron{
     margin: 50px;
 }
+
 .comment{
     margin: 10px 0;
+}
+
+.menu {
+    color: #999;
+    margin-top: 5px;
+}
+
+.menu .icon {
+    margin-right: 6px;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.menu .comment-icon {
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.menu .icon:hover {
+    color: #499ef3;
+}
+
+.comments{
+    padding-bottom: 5px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #999999;
 }
